added the last slide

--- a/index.html
+++ b/index.html
@@ -56,9 +56,16 @@
              height="30" 
              depth="60"
              rotation="0 180 0"
-             position="-50 15.3 87"
+             position="-81 15.3 56"
              static-body></a-box>
-             
+      <a-box color="white"
+             src="img/20170410_114237.jpg"
+             width="2" 
+             height="30" 
+             depth="60"
+             rotation="0 180 0"
+             position="-81 15.3 -4"
+             static-body></a-box>
       <a-box color="yellow"
       opacity="1"
              width="2" height="62" depth="71"
